# lyrics-importer

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
src/app/: logic.py  main.py  main.spec
src/app/utils/: fetch.py  formatter.py  resource_path.py
