[project]
name = "lyrics-importer"
version = "0.1.0"
description = "Automação para importação de letras de música"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Ismael Santiago", email = "ismaelfreitas.santiago@gmail.com" }
]
# Dependências principais (Runtime)
dependencies = [
    "blinker==1.9.0",
    "click==8.3.1",
    "colorama==0.4.6",
    "Flask==3.1.2",
    "flask-cors==6.0.2",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.6",
    "MarkupSafe==3.0.3",
    "pillow==12.1.0",
    "pystray==0.19.5",
    "six==1.17.0",
    "Werkzeug==3.1.5",
]

[project.optional-dependencies]
# Dependências de desenvolvimento (não incluídas no app final)
dev = [
    "pyinstaller",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"